@@ -1,7 +1,8 @@
 0.8.2
 =====
-* Adding `read_through` function when reading a stream (`$all` included).
-* Support latest `message_timeout_ms` and `checkpoint_after_ms` persistent.proto changes.
+* [es6] Adding `read_through` function when reading a stream (`$all` included).
+* [es6] Support latest `message_timeout_ms` and `checkpoint_after_ms` persistent.proto changes.
+* [es6] Fix persistent subscription id retrieval.
 
 0.8.1
 =====
